# Bankdaten-ML

./: .dockerignore  .gitignore  Dockerfile  best_model.h5  devity.config  docker-compose.yml  kontostand_app.py  kontostand_vorhersage.py  pyproject.toml  readme  readme.md
.github/workflows/: docker-image.yml
