[tool.poetry]
name = "kontostand-vorhersage"
version = "0.1.0"
description = "ML-basierte Kontostand-Vorhersage mit Streamlit UI"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pandas = "^2.1.0"
numpy = "^1.24.0"
streamlit = "^1.27.0"
tensorflow = "^2.14.0"
scikit-learn = "^1.3.0"
plotly = "^5.17.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"